--- a/Report/eece571MProjectReferences.bib
+++ b/Report/eece571MProjectReferences.bib
@@ -27,3 +27,40 @@ Eprint = {arXiv:1602.04105},
 @article{ann1, title={Effective Feature Selection Method for Deep Learning-Based Automatic Modulation Classification Scheme Using Higher-Order Statistics}, volume={10}, ISSN={2076-3417}, url={http://dx.doi.org/10.3390/app10020588}, DOI={10.3390/app10020588}, number={2}, journal={Applied Sciences}, publisher={MDPI AG}, author={Lee, Sang Hoon and Kim, Kwang-Yul and Shin, Yoan}, year={2020}, month={Jan}, pages={588}}
 
 @INPROCEEDINGS{ann2, author={B. {Kim} and J. {Kim} and H. {Chae} and D. {Yoon} and J. W. {Choi}}, booktitle={2016 International Conference on Information and Communication Technology Convergence (ICTC)}, title={Deep neural network-based automatic modulation classification technique}, year={2016}, volume={}, number={}, pages={579-582},}
+
+@Article{catEye,
+author={HUBEL, D. H.
+and WIESEL, T. N.},
+title={Receptive fields of single neurones in the cat's striate cortex},
+journal={The Journal of physiology},
+year={1959},
+month={Oct},
+volume={148},
+number={3},
+pages={574-591},
+keywords={*CEREBRAL CORTEX/physiology},
+keywords={*NEURONS/physiology},
+keywords={Animals},
+keywords={Cats},
+keywords={Cerebral Cortex/*physiology},
+keywords={Neurons/*physiology},
+keywords={*Visual Cortex},
+note={14403679[pmid]},
+note={PMC1363130[pmcid]},
+issn={0022-3751},
+doi={10.1113/jphysiol.1959.sp006308},
+url={https://pubmed.ncbi.nlm.nih.gov/14403679}
+}
+
+@Article{neocognitron,
+author={Fukushima, Kunihiko},
+title={Neocognitron: A self-organizing neural network model for a mechanism of pattern recognition unaffected by shift in position},
+journal={Biological Cybernetics},
+year={1980},
+volume={36},
+number={4},
+pages={193-202},
+issn={1432-0770},
+doi={10.1007/BF00344251},
+url={https://doi.org/10.1007/BF00344251}
+}
