--- a/Report/finalReport.tex
+++ b/Report/finalReport.tex
@@ -142,6 +142,10 @@ Subsubsection text here.
 
 \subsection{Convolutional Neural Networks (CNN)}
 
+CNNs were inspired largely by the way neurons in the visual cortex of the brain responded to visual stimulus. In particular, early research by a pair of neurophysiologists \cite{catEye} uncovered that visual processing in the mammalian brain always commenced with the detection of simple structures such as oriented edges. Fukushima  took inspiration from this notion of hierarchical processing and proposed the Neocognitron \cite{neocognitron}, a multilayer neural network that could perform pattern recognition through hierarchical feature extraction. The Neocognitron was, for all intents and purposes, the precursor to modern CNNs.
+
+
+
 \section{Dataset}
 
 \section{Conclusion}
