--- a/Report/eece571MProjectReferences.bib
+++ b/Report/eece571MProjectReferences.bib
@@ -64,3 +64,11 @@ issn={1432-0770},
 doi={10.1007/BF00344251},
 url={https://doi.org/10.1007/BF00344251}
 }
+
+@Misc{stratSamp,
+title={Encyclopedia of Survey Research Methods AU - Lavrakas, Paul},
+year={2008},
+address={Thousand Oaks, California},
+doi={10.4135/9781412963947},
+url={https://methods.sagepub.com/reference/encyclopedia-of-survey-research-methods}
+}
