--- a/Report/finalReport - Copy (2).tex
+++ b/Report/finalReport - Copy (2).tex
@@ -1,4 +1,4 @@
-\documentclass[journal,onecolumn]{IEEEtran}
+\documentclass[12pt,journal,onecolumn,twoside]{IEEEtran}
 
 % correct bad hyphenation here
 %\hyphenation{op-tical net-works semi-conduc-tor}
