--- a/Report/eece571MProjectReferences.bib
+++ b/Report/eece571MProjectReferences.bib
@@ -72,3 +72,16 @@ address={Thousand Oaks, California},
 doi={10.4135/9781412963947},
 url={https://methods.sagepub.com/reference/encyclopedia-of-survey-research-methods}
 }
+
+@ARTICLE{lenet5, author={Y. {Lecun} and L. {Bottou} and Y. {Bengio} and P. {Haffner}}, journal={Proceedings of the IEEE}, title={Gradient-based learning applied to document recognition}, year={1998}, volume={86}, number={11}, pages={2278-2324},}
+
+@misc{unet,
+Author = {Olaf Ronneberger and Philipp Fischer and Thomas Brox},
+Title = {U-Net: Convolutional Networks for Biomedical Image Segmentation},
+Year = {2015},
+Eprint = {arXiv:1505.04597},
+}
+
+@INPROCEEDINGS{featImage, author={J. H. {Lee} and K. {Kim} and Y. {Shin}}, booktitle={2019 International Conference on Artificial Intelligence in Information and Communication (ICAIIC)}, title={Feature Image-Based Automatic Modulation Classification Method Using CNN Algorithm}, year={2019}, volume={}, number={}, pages={1-4},}
+
+@ARTICLE{ddriven,  author={Y. {Wang} and M. {Liu} and J. {Yang} and G. {Gui}},  journal={IEEE Transactions on Vehicular Technology},  title={Data-Driven Deep Learning for Automatic Modulation Recognition in Cognitive Radios},   year={2019},  volume={68},  number={4},  pages={4074-4077},}
