--- a/Report/eece571MProjectReferences.bib
+++ b/Report/eece571MProjectReferences.bib
@@ -85,3 +85,5 @@ Eprint = {arXiv:1505.04597},
 @INPROCEEDINGS{featImage, author={J. H. {Lee} and K. {Kim} and Y. {Shin}}, booktitle={2019 International Conference on Artificial Intelligence in Information and Communication (ICAIIC)}, title={Feature Image-Based Automatic Modulation Classification Method Using CNN Algorithm}, year={2019}, volume={}, number={}, pages={1-4},}
 
 @ARTICLE{ddriven,  author={Y. {Wang} and M. {Liu} and J. {Yang} and G. {Gui}},  journal={IEEE Transactions on Vehicular Technology},  title={Data-Driven Deep Learning for Automatic Modulation Recognition in Cognitive Radios},   year={2019},  volume={68},  number={4},  pages={4074-4077},}
+
+@INPROCEEDINGS{c42norm,  author={M. {Narendar} and A. P. {Vinod} and A. S. M. {Kumar} and A. K. {Krishna}},  booktitle={2011 XXXth URSI General Assembly and Scientific Symposium},  title={Automatic modulation classification for cognitive radios using cumulants based on fractional lower order statistics},   year={2011},  volume={},  number={},  pages={1-4},}
